@@ -9,4 +9,5 @@ public class PreferenceConstants {
 	public static final String SKIP_DELETE = "skipDelete";
 	public static final String DELETE_BOTH = "deleteBoth";
 	public static final String WRAP_SELECTION = "wrapSelection";
+	public static final String AUTO_INDENT = "autoIndent";
 }
